--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified yet\"",
     "prepare": "husky",
-    "build": "tsc",
+    "build": "tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "dev": "concurrently \"nodemon --exec 'ts-node' src/server.ts\" \"tailwindcss -i src/tailwind.css -o src/public/css/style.css --watch\"",
     "lint": "eslint 'src/**/*.ts'"
   },
   "keywords": [],
@@ -19,16 +19,23 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.31.0",
+    "@tailwindcss/cli": "^4.1.11",
+    "@types/connect-livereload": "^0.6.3",
     "@types/express": "^5.0.3",
+    "@types/livereload": "^0.9.5",
     "@types/node": "^24.0.14",
+    "concurrently": "^9.2.0",
+    "connect-livereload": "^0.6.1",
     "dotenv": "^17.2.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "livereload": "^0.9.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
@@ -36,6 +43,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0"
+  },
+  "nodemonConfig": {
+    "ext": "ts,ejs"
   }
 }
