--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
     "start": "node dist/server.js",
     "dev": "concurrently \"nodemon --exec 'ts-node' src/server.ts\" \"tailwindcss -i src/tailwind.css -o src/public/css/style.css --watch\"",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint 'src/**/*.ts'",
+    "create-session-table": "psql odin_file_uploader < node_modules/connect-pg-simple/table.sql"
   },
   "keywords": [],
   "author": "daniel_velkov <danielvelkov13@gmail.com>",
@@ -20,10 +21,14 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.31.0",
     "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/connect-livereload": "^0.6.3",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/livereload": "^0.9.5",
     "@types/node": "^24.0.14",
+    "@types/pg": "^8.15.4",
     "concurrently": "^9.2.0",
     "connect-livereload": "^0.6.1",
     "dotenv": "^17.2.0",
@@ -43,10 +48,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
+    "bcryptjs": "^3.0.2",
+    "connect-pg-simple": "^10.0.0",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.16.3"
   },
   "nodemonConfig": {
-    "ext": "ts,ejs"
+    "ext": "ts,ejs",
+    "ignore": [
+      "dist",
+      "node_modules"
+    ]
   }
 }
