--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@types/method-override": "^3.0.0",
+    "@types/multer": "^2.0.0",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^3.0.2",
@@ -56,6 +58,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "method-override": "^3.0.0",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3"
