--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/multer": "^2.0.0",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "@types/validator": "^13.15.2",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
     "ejs": "^3.1.10",
@@ -59,10 +60,12 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "method-override": "^3.0.0",
+    "mime": "^4.0.7",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "validator": "^13.15.15"
   },
   "nodemonConfig": {
     "ext": "ts,ejs",
