--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/validator": "^13.15.2",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "connect-pg-simple": "^10.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -62,6 +63,7 @@
     "method-override": "^3.0.0",
     "mime": "^4.0.7",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
