--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified yet\"",
-    "prepare": "husky",
+    "prepare": "husky install",
     "build": "npm run prisma:generate && tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
     "start": "node dist/server.js",
     "dev": "concurrently \"nodemon --exec 'ts-node' src/server.ts\" \"tailwindcss -i src/tailwind.css -o src/public/css/style.css --watch\"",
@@ -20,8 +20,6 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.31.0",
-    "@tailwindcss/cli": "^4.1.11",
-    "@tailwindcss/forms": "^0.5.10",
     "@types/connect-livereload": "^0.6.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.3",
@@ -32,7 +30,6 @@
     "@types/pg": "^8.15.4",
     "concurrently": "^9.2.0",
     "connect-livereload": "^0.6.1",
-    "dotenv": "^17.2.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
@@ -40,15 +37,12 @@
     "livereload": "^0.9.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
-    "prisma": "^6.12.0",
-    "tailwindcss": "^4.1.11",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/method-override": "^3.0.0",
     "@types/multer": "^2.0.0",
     "@types/passport": "^1.0.17",
@@ -57,6 +51,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "connect-pg-simple": "^10.0.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
@@ -69,6 +64,11 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "prisma": "^6.13.0",
+    "tailwindcss": "^4.1.11",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
     "validator": "^13.15.15"
   },
   "nodemonConfig": {
