--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified yet\"",
-    "prepare": "husky install",
+    "prepare": "husky",
     "build": "npm run prisma:generate && tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
     "start": "node dist/server.js",
     "dev": "concurrently \"nodemon --exec 'ts-node' src/server.ts\" \"tailwindcss -i src/tailwind.css -o src/public/css/style.css --watch\"",
@@ -32,7 +32,6 @@
     "connect-livereload": "^0.6.1",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
-    "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "livereload": "^0.9.3",
     "nodemon": "^3.1.10",
@@ -57,6 +56,7 @@
     "express-session": "^1.18.1",
     "express-useragent": "^1.0.15",
     "express-validator": "^7.2.1",
+    "husky": "^9.1.7",
     "method-override": "^3.0.0",
     "mime": "^4.0.7",
     "multer": "^2.0.2",
