--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified yet\"",
     "prepare": "husky",
-    "build": "npm run prisma:generate && tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
+    "build": "npm run prisma:migrate && npm run prisma:generate && tsc && tailwindcss -i src/tailwind.css -o src/public/css/style.css",
     "start": "node dist/server.js",
     "dev": "concurrently \"nodemon --exec 'ts-node' src/server.ts\" \"tailwindcss -i src/tailwind.css -o src/public/css/style.css --watch\"",
     "lint": "eslint 'src/**/*.ts'",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "daniel_velkov <danielvelkov13@gmail.com>",
