--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^6.12.0",
     "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/compression": "^1.8.1",
     "@types/connect-livereload": "^0.6.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.3",
@@ -48,6 +49,7 @@
     "@types/validator": "^13.15.2",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "compression": "^1.8.1",
     "connect-livereload": "^0.6.1",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^17.2.1",
